<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3CFFC107"
    tools:context=".MainFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/label_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:lines="3"
            android:text="@string/login_instructions_string"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/textbox_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/textbox"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:inputType="phone"
            android:maxLength="16"
            android:textAlignment="center"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn_send_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/goto_login_string"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/label_write_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lines="1"
            android:text="@string/verification_code_string"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:visibility="gone" />

        <EditText
            android:id="@+id/textbox_verification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/textbox"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:inputType="number"
            android:maxLength="6"
            android:textAlignment="center"
            android:textSize="25sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/textbox"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/confirm_code_string"
            android:textSize="20sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_resend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/textbox"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/resend_code_string"
            android:textSize="20sp"
            android:visibility="gone" />

    </LinearLayout>

    <TextView
        android:id="@+id/label_app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_again_string"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37" />

    <TextView
        android:id="@+id/label_title_emojis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_emojis_string"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_app_title" />

    <TextView
        android:id="@+id/label_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_string"
        android:textAlignment="textEnd"
        android:textColor="@android:color/secondary_text_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/info_string"
        app:layout_constraintBottom_toTopOf="@+id/label_about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>