<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/categories_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3CFFC107"
    tools:context=".CategoriesFragment">

    <TextView
        android:id="@+id/label_select_category_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_category_string"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/LinearLayoutB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37" />

    <LinearLayout
        android:id="@+id/LinearLayoutB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41000003">

        <Button
            android:id="@+id/btn_B1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="☢"
            android:textAlignment="center"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/label_B1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/science_string"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btn_B2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="🌍"
            android:textAlignment="center"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/label_B2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/geography_string"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btn_B3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="🧮"
            android:textAlignment="center"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/label_B3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maths_string"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/LinearLayoutB"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41000003">

        <Button
            android:id="@+id/btn_C1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="👑"
            android:textAlignment="center"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/label_C1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/history_string"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btn_C2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="🎭"
            android:textAlignment="center"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/label_C2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/general_culture_string"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btn_C3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="🔮"
            android:textAlignment="center"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/label_C3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/others_string"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/LinearLayoutB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41000003">

        <Button
            android:id="@+id/btn_A1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="🗣"
            android:textAlignment="center"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/label_A1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/languages_string"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btn_A2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="⚽"
            android:textAlignment="center"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/label_A2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sports_string"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btn_A3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="💸"
            android:textAlignment="center"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/label_A3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/economy_string"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayoutB"
        app:layout_constraintVertical_bias="0.32999998">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/where_to_start_string"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_goto_example"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/example_string" />
    </LinearLayout>

    <TextView
        android:id="@+id/label_loading2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/textbox"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/loading_string"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

</androidx.constraintlayout.widget.ConstraintLayout>